# leaftop

./: README.md  meson.build
data/: meson.build  xyz.slowscript.leaftop.desktop.in  xyz.slowscript.leaftop.gschema.xml  xyz.slowscript.leaftop.metainfo.xml.in
data/icons/: meson.build
debian/: .gitignore  changelog  control  copyright  rules
po/: POTFILES  cs.po  leaftop.pot  meson.build
src/: application.vala  chart_button.vala  chart_widget.vala  config.vapi  leaftop.gresource.xml  main.vala  meson.build  process.vala  process_name_cell.vala  process_watcher.vala  resource_watcher.vala  split_bar_widget.vala  style.css  utils.vala  window.ui  window.vala
src/resource_pages/: details_grid.vala  disk_page.ui  disk_page.vala  memory_page.ui  memory_page.vala  network_page.ui  network_page.vala  processor_page.ui  processor_page.vala
